# TrainningDataQA

./: .env  .env.example  .gitignore  CLAUDE.md  startend.bat  startfront.bat
backend/: .env.example  .gitignore  alembic.ini  check_db.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_benchmark_tables.py  002_create_v_learner_comprehensive.py  003_create_v_exam_analysis.py  004_create_v_skill_error_summary.py  005_create_v_learner_overview.py  006_create_v_course_overview.py  007_create_qa_session_log.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  ai_query.py  auth.py  reports.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/jobs/: cleanup_reports.py  evolution_job.py  refresh_wide_tables.py  scheduler.py
backend/app/models/: base.py  benchmark.py  course.py  exam.py  learning.py  org.py  path.py  progress.py  stats.py  user.py
backend/app/schemas/: auth.py  intent.py  sse_events.py  tools.py
backend/app/services/: auth_service.py
backend/app/services/ai/: clarification.py  evolution_analyzer.py  intent_classifier.py  intent_definitions.py  prompt_builder.py  react_engine.py  schema_index.py  session_manager.py
backend/app/services/export/: __init__.py  excel_generator.py
backend/app/services/query/: permission_scope.py  query_executor.py  tool_registry.py
backend/tests/services/ai/: test_evolution_analyzer.py  test_intent_classifier.py  test_react_engine.py  test_schema_index.py  test_session_manager.py
doc/: 数据问答系统技术路线.md  (+4 more)
(+61 files in other folders)
